@@ -1,5 +1,6 @@
 {{$NEXT}}
-
+    [BugFixes]
+    - Copy dependency checks and compilation tests to fullfil github actions tests
 0.005     2023-11-10 02:08:58-03:00 America/Sao_Paulo
     [BugFixes]
     - Add prereqs
